[ADD] add all feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=exchange-card-app
+spring.datasource.username=postgres
+spring.datasource.password=135913
+spring.datasource.url=jdbc:postgresql://localhost:5432/exchangeapp
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+app.shopee.jwt.jwt-secret = aakjajiisadks
+app.shopee.jwt.app-name = Shopee Mart Application
+app.shopee.jwt.jwt-expiert = 3600
